Modified index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h1>Kavita Athalye</h1>
 
             <nav>
-                <a href="#">About</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Contact</a>
+                <a class="link" href="#">About</a>
+                <a class="link" href="#">Portfolio</a>
+                <a class="link" href="#">Contact</a>
             </nav>
         </div>
     </header>
@@ -26,7 +26,7 @@
             <section>
                 <h2 class="subheading">About Me</h2>
 
-                <img class="headshot" src="/m5-hw5-athalye-kavita/profile-pic.png" alt="Professional headshot">
+                <img class="headshot" src="/m6-hw6-athalye-kavita/profile-pic.png" alt="Professional headshot">
 
                 <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
                 <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
@@ -39,9 +39,9 @@
             <section>
                 <h2>Contact</h2>
 
-                <img src="/m5-hw5-athalye-kavita/git.png" alt="GitHub Logo" width="120">
-                <img src="/m5-hw5-athalye-kavita/linkedin.png" alt="LinkedIn Logo" width="120">
-                <img src="/m5-hw5-athalye-kavita/soverflow.png" alt="StackOverflow Logo" width="120">
+                <img src="/m6-hw6-athalye-kavita/git.png" alt="GitHub Logo" width="120">
+                <img src="/m6-hw6-athalye-kavita/linkedin.png" alt="LinkedIn Logo" width="120">
+                <img src="/m6-hw6-athalye-kavita/soverflow.png" alt="StackOverflow Logo" width="120">
             </section>
 
         </aside>
