--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h1>Kavita Athalye</h1>
 
             <nav>
-                <a class="link" href="#">About</a>
-                <a class="link" href="#">Portfolio</a>
-                <a class="link" href="#">Contact</a>
+                <a href="#">About</a>
+                <a href="#">Portfolio</a>
+                <a href="#">Contact</a>
             </nav>
         </div>
     </header>
