--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="description" content="Welcome to my website about me. Learn more about my life!">
     <title>Week 6</title>
@@ -10,18 +9,15 @@
 <body>
 
     <header>
-        <div class="container">
             <h1>Kavita Athalye</h1>
-
             <nav>
                 <a href="#">About</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
             </nav>
-        </div>
     </header>
 
-    <div class="container main-content">
+    <div>
         <main>
             <section>
                 <h2 class="subheading">About Me</h2>
@@ -46,8 +42,6 @@
 
         </aside>
     </div>
-
-
     <footer>
         <p>This site was created by Kavita Athalye</p>
     </footer>
