--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <header>
-            <h1>Kavita Athalye</h1>
             <nav>
+                <h1 class="Name">Kavita Athalye</h1>
                 <a href="#">About</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
