Modified index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <title>Week 6</title>
 </head>
 <body>
-
     <header>
+        <div class="container">
+            <h1>Kavita Athalye</h1>
             <nav>
-                <h1 class="Name">Kavita Athalye</h1>
                 <a href="#">About</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
             </nav>
+        </div>
     </header>
 
-    <div>
+    <div class="container main-content">
         <main>
             <section>
                 <h2 class="subheading">About Me</h2>
@@ -29,17 +30,21 @@
                 <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
 
             </section>
-            <aside>
-                <section>
-                    <h2>Contact</h2>
-    
-                    <img src="/m6-hw6-athalye-kavita/git.png" alt="GitHub Logo" width="120">
-                    <img src="/m6-hw6-athalye-kavita/linkedin.png" alt="LinkedIn Logo" width="120">
-                    <img src="/m6-hw6-athalye-kavita/soverflow.png" alt="StackOverflow Logo" width="120">
-                </section>
-            </aside>
         </main>
+
+        <aside>
+            <section>
+                <h2>Contact</h2>
+
+                <img src="/m6-hw6-athalye-kavita/git.png" alt="GitHub Logo" width="120">
+                <img src="/m6-hw6-athalye-kavita/linkedin.png" alt="LinkedIn Logo" width="120">
+                <img src="/m6-hw6-athalye-kavita/soverflow.png" alt="StackOverflow Logo" width="120">
+            </section>
+
+        </aside>
     </div>
+
+
     <footer>
         <p>This site was created by Kavita Athalye</p>
     </footer>
