--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Kavita Athalye</h1>
+        <div>
             <nav>
+                <h1 class="Name">Kavita Athalye</h1>
                 <a href="#">About</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contact</a>
@@ -18,7 +18,7 @@
         </div>
     </header>
 
-    <div class="container main-content">
+    <div class="container">
         <main>
             <section>
                 <h2 class="subheading">About Me</h2>
@@ -28,7 +28,15 @@
                 <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
                 <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
                 <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
-
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p><p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
             </section>
         </main>
 
