Modified index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Inceptos himenaeos suspendisse tincidunt scelerisque placerat. Ridiculus fames semper habitant condimentum sapien fringilla est aptent. Magnis morbi vestibulum vitae tristique luctus. Lobortis nulla integer duis primis libero. Pellentesque faucibus vehicula habitant praesent sapien. Auctor convallis justo purus tincidunt semper netus tristique parturient. Tincidunt ut tincidunt ipsum, sagittis neque tristique faucibus pretium mollis.</p>
             </section>
         </main>
+        </div>
 
+    <div class="side">
         <aside>
             <section>
                 <h2>Contact</h2>
@@ -48,10 +50,8 @@
                 <img src="/m6-hw6-athalye-kavita/linkedin.png" alt="LinkedIn Logo" width="120">
                 <img src="/m6-hw6-athalye-kavita/soverflow.png" alt="StackOverflow Logo" width="120">
             </section>
-
         </aside>
     </div>
-
 
     <footer>
         <p>This site was created by Kavita Athalye</p>
