--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <section>
                 <h2>Contact</h2>
 
-                <img src="/m6-hw6-athalye-kavita/git.png" alt="GitHub Logo" width="120">
-                <img src="/m6-hw6-athalye-kavita/linkedin.png" alt="LinkedIn Logo" width="120">
-                <img src="/m6-hw6-athalye-kavita/soverflow.png" alt="StackOverflow Logo" width="120">
+                <img src="/m6-hw6-athalye-kavita/git.png" alt="GitHub Logo" width="120" href="https://github.com/">
+                <img src="/m6-hw6-athalye-kavita/linkedin.png" alt="LinkedIn Logo" width="120" href="https://www.linkedin.com/feed/">
+                <img src="/m6-hw6-athalye-kavita/soverflow.png" alt="StackOverflow Logo" width="120" href="https://stackoverflow.com/questions">
             </section>
 
         </aside>
